# hand-gesture-ml

./: .gitignore  README.md  collect_data.py  pyproject.toml  requirements.txt  run_controller.py  train_model.py
gesture_controller/: __init__.py  actions.py  collector.py  dataset.py  landmarks.py  model_assets.py  modeling.py  runtime.py  runtime_cli.py  training_cli.py
hand-gesture/: .gitignore  README.md  import_hand_dataset.py  pyproject.toml  requirements.txt  train_face_model.py  web_ui.py
hand-gesture/config/: gesture_bindings.json
hand-gesture/gesture_controller/: __init__.py  actions.py  dataset.py  external_datasets.py  face_features.py  face_landmarks.py  face_modeling.py  face_training_cli.py  features.py  hand_analytics.py  import_hand_dataset_cli.py  landmarks.py  model_assets.py  modeling.py  runtime.py  runtime_cli.py  training_cli.py  webapp.py
hand-gesture/gesture_controller/web/static/: app.css  app.js
hand-gesture/gesture_controller/web/templates/: index.html
hand-gesture/tests/: test_external_datasets.py  test_face_features.py  test_features.py  test_hand_analytics.py  test_runtime.py  test_training_pipeline.py  test_webapp.py
sign-language/: .gitignore  README.md  download_dataset.py  requirements.txt  train_model.py  web_ui.py
sign-language/asl_app/: __init__.py  asl_reference.py  dataset.py  features.py  modeling.py  runtime_bootstrap.py  webapp.py
sign-language/tests/: test_dataset.py  test_features.py  test_modeling.py  test_webapp.py
sign-language/web/static/: app.css  app.js
sign-language/web/templates/: index.html
