[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hand-gesture-ml"
version = "0.1.0"
description = "Hand gesture data collection, training, and live control with MediaPipe."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3",
    "mediapipe>=0.10",
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pyautogui>=0.9.54",
    "scikit-learn>=1.5",
]

[tool.setuptools.packages.find]
include = ["gesture_controller*"]
